# inft2503-cpp-submissions

./: .gitignore  README.md
assignment-1/: CMakeLists.txt  README.md  a.cpp  b.cpp  temperatures.txt
assignment-10/: CMakeLists.txt
assignment-2/: 1.cpp  2.txt  3.txt  4.cpp  5.cpp  6.cpp  CMakeLists.txt
assignment-3/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  commodity.cpp  commodity.hpp
assignment-4/: 1.cpp  2.cpp  CMakeLists.txt
assignment-5/: 1.cpp  2.cpp  CMakeLists.txt
assignment-6/public/: a_page.html
assignment-7/: 1.cpp  2.cpp  CMakeLists.txt  fraction.cpp  fraction.hpp  set.cpp  set.hpp
assignment-8/: 1.cpp  2.cpp  CMakeLists.txt  Pair.hpp
assignment-9/: 1.cpp  CMakeLists.txt
assingment-6/: 1.cpp  2.cpp  CMakeLists.txt
assingment-6/public/: index.html
